[tool.poetry]
name = "stanford-cs234"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
gym = "==0.10.9"
matplotlib = "^3.6.2"
numpy = "^1.23.4"
scipy = "^1.9.3"
ipykernel = "^6.17.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
